--- a/examples/github.jinja2
+++ b/examples/github.jinja2
@@ -2,7 +2,7 @@
 <strong><a href="{{ repository.html_url }}">{{ repository.full_name }}</a></strong><br>
 ## event is a push
 {% if pusher is defined %}
-{% if sender.login == pusher.name %}<a href="{{ sender.html_url }}">{{ sender.login }}</a>{% else %}{{ pusher.name }}{% endif %}{% if forced %} force{% endif %} <strong>pushed to {{ base_ref }}</strong>:<br>
+{% if sender.login == pusher.name %}<a href="{{ sender.html_url }}">{{ sender.login }}</a>{% else %}{{ pusher.name }}{% endif %}{% if forced %} force{% endif %} <strong>pushed to {{ ref }}</strong>:<br>
 <ul>
 {% for c in commits %}
 <li>{{ c.author.name }}: <a href="{{ c.url }}">{{ c.message }}</a></li>
