--- a/examples/github.jinja2
+++ b/examples/github.jinja2
@@ -1,8 +1,8 @@
-{% if pusher is defined or release is defined or discussion is defined or issue is defined or hook is defined or pull_request is defined %}
-<strong><a href="{{ repository.html_url }}">{{ repository.full_name }}</a></strong><br>
+{% if pusher is defined or release is defined or discussion is defined or issue is defined or hook is defined or zen is defined or pull_request is defined %}
+[<strong><a href="{{ repository.html_url }}">{{ repository.full_name }}</a></strong>]<br>
 ## event is a push
 {% if pusher is defined %}
-{% if sender.login == pusher.name %}<a href="{{ sender.html_url }}">{{ sender.login }}</a>{% else %}{{ pusher.name }}{% endif %}{% if forced %} force{% endif %} <strong>pushed to {{ ref }}</strong>:<br>
+{% if sender.login == pusher.name %}<a href="{{ sender.html_url }}">{{ sender.login }}</a>{% else %}{{ pusher.name }}{% endif %}{% if forced %} force{% endif %} pushed <code>{{ after[:7] }}</code> to {% if 'refs/heads/' in ref %}branch <a href="{{ repository.html_url }}/tree/{{ ref|replace('refs/heads/', '') }}"><strong>{{ ref|replace('refs/heads/', '') }}</strong></a>{% else %}{{ ref }}{% endif %}:<br>
 <ul>
 {% for c in commits %}
 <li>{{ c.author.name }}: <a href="{{ c.url }}">{{ c.message }}</a></li>
